# mek-ut-er-ya

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.ps1  before_deploy.sh  ubuntu-install-packages
cli/: Cargo.toml
cli/src/: main.rs
ethiopic-calendar/: Cargo.toml  README.md
ethiopic-calendar/src/: lib.rs
lib/: Cargo.toml
lib/src/: ethiopian.rs  gregorian.rs
mekuteriya/: Cargo.toml
