[package]
name = "ethiopic-calendar"
version = "0.1.0"
edition = "2021"
authors = ["Frectonz"]
license = "MIT"
documentation = "https://docs.rs/ethiopic-calendar"
homepage = "https://github.com/frectonz/mek’ut’erīya/lib"
repository = "https://github.com/frectonz/mek’ut’erīya/lib"
description = "Ethiopian calendar implementation in Rust"
