[package]
name = "ethiopic-calendar"
version = "0.1.3"
edition = "2021"
authors = ["Frectonz"]
license = "MIT"
documentation = "https://docs.rs/ethiopic-calendar"
homepage = "https://github.com/frectonz/mek-ut-er-ya/tree/trunk/lib"
repository = "https://github.com/frectonz/mek-ut-er-ya/tree/trunk/lib"
description = "Ethiopian calendar implementation in Rust"
